bauer/tests/ui/adapter-tuple-conflict.fail.stderr
error: `tuple` cannot be added with `adapter`
 --> tests/ui/adapter-tuple-conflict.fail.rs:5:57
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), tuple)]
  |                                                         ^^^^^

error: `tuple` may only be used on fields that are tuples
 --> tests/ui/adapter-tuple-conflict.fail.rs:7:15
  |
7 |     #[builder(tuple, adapter(|x: u32, y: u32| (x + 1, y + 1)))]
  |               ^^^^^

warning: unused variable: `x`
 --> tests/ui/adapter-tuple-conflict.fail.rs:5:24
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), tuple)]
  |                        ^ help: if this is intentional, prefix it with an underscore: `_x`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `y`
 --> tests/ui/adapter-tuple-conflict.fail.rs:5:32
  |
5 |     #[builder(adapter(|x: u32, y: u32| (x + 1, y + 1)), tuple)]
  |                                ^ help: if this is intentional, prefix it with an underscore: `_y`

warning: unused variable: `field_b`
 --> tests/ui/adapter-tuple-conflict.fail.rs:8:5
  |
8 |     field_b: String,
  |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_field_b`
